# woody

./: .gitignore  README.md  __int__.py  blender_extension.json  index.json  pyproject.toml  test_02.py  updateZip.py
woody/: WIP__init__.py  __init__.py  blend_functions.py  blender_manifest.toml  catalogs.py  context.py  folders.py  main.py  operators.py  panels.py  preferences.py  profiler.py  properties.py  utils.py
woody/cli/: cli.py  commands.py  setup.py  splash_screen.py
woody/cli/cmds/: context.py  core.py  create.py  install.py  launch.py  queries.py  uninstall.py  update.py
woody/dcc/blender/: blender.py  blender_sync.py  startup.py  woody_addon.py
woody/lib/blender/: __init__.py  apply_render_config.py  create_blend_with_collections.py  generate_config_script.py  get_preferences.py  incremental_save.py  new_blend.py  open_blend.py  open_publish_blend_file.py  save_current_scene.py  set_render_output_to_cg.py  show_popup_message.py
woody/lib/folders/: __init__.py  get_folder_structure.py  get_folder_types.py  get_next_version_folder.py
woody/lib/json/: __init__.py  create_default_proj_config.py  create_shot_config_file.py  (+2 more)
woody/operators/: __init__.py  apply_render_config.py  clear_enum.py  create_asset.py  create_group.py  create_project.py  create_shot.py  open_asset.py  open_publish.py  override_collection.py  publish.py  render_with_prompt.py  set_frame_range.py  set_output_config.py  version_up.py
woody/pywoody/: __init__.py
woody/ui/: __init__.py  assets_shots.py  context.py  publish_browser.py  settings.py
woody/utils/: __init__.py
(+17 files in other folders)
